--- a/src/App.css
+++ b/src/App.css
@@ -1,18 +1,19 @@
-
 .navbar {
-  background-color:yellow;
+  background-color: rgb(10, 10, 0);
   overflow: hidden;
+  position: fixed;
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   width: 100vw;
   margin: 0;
+  size: 3rem;
 }
-.search{
+.search {
   margin: 10px;
 }
-.btn-search{
+.btn-search {
   background: #3498db;
   background-image: -webkit-linear-gradient(top, #3498db, #2980b9);
   background-image: -moz-linear-gradient(top, #3498db, #2980b9);
@@ -28,7 +29,7 @@
   margin: 10px;
   text-decoration: none;
 }
-.btn-search:hover{
+.btn-search:hover {
   background: #3cb0fd;
   background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
   background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
@@ -41,7 +42,7 @@
 .navbar-item {
   float: left;
   display: block;
-  color: blue;
+  color: #0000ff;
   text-align: center;
   padding: 14px 20px;
   text-decoration: none;
@@ -52,7 +53,6 @@
   background-color: blue;
   color: yellow;
 }
-
 
 @keyframes logo-spin {
   from {
