--- a/src/components/ItemCard.module.css
+++ b/src/components/ItemCard.module.css
@@ -2,8 +2,9 @@
   border: solid 2px;
   display: flex;
   flex-direction: column;
-  width: 50%;
+  width: fit-content;
   margin: 1em;
+  align-items: center;
 }
 
 .prix {
