--- a/src/App.css
+++ b/src/App.css
@@ -63,6 +63,11 @@
   }
 }
 
+button {
+  margin-top: 4em;
+  margin-left: 1em;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   a:nth-of-type(2) .logo {
     animation: logo-spin infinite 20s linear;
